--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-secure-storage": "^1.3.2",
     "styled-components": "^6.1.11",
+    "use-query-params": "^2.2.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
